@@ -463,3 +463,6 @@ ALTER TABLE tcontract ADD `status` tinyint(3) NOT NULL DEFAULT 1;
 
 /* 11/09/2013  */
 ALTER TABLE tinvoice MODIFY `bill_id` varchar(30) NOT NULL DEFAULT '';
+
+/* 12/03/2013 */
+ALTER TABLE tpending_mail ADD `extra_headers` text DEFAULT NULL;
